Remove Services and Website Review

--- a/contact.html
+++ b/contact.html
@@ -32,11 +32,11 @@ permalink: /contact/
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact Us For a Quote or More Information | Sybiltec Web Design</title>       
-        <meta name="Description" content="Providing web design services in Erith, Bexley and South East London. Shopify, WordPress and Wix. Contact us for a free consultation or website review.">
+        <meta name="Description" content="Providing web design services in Erith, Bexley and South East London. Shopify, WordPress and Wix. Contact us for a free consultation or a quote.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Contact Us for a Quote or More Info | Sybiltec Web Design" />
-        <meta property="og:description" content="Providing web design services in Erith, Bexley and South East London. Shopify, WordPress and Wix. Contact us for a free consultation or website review." />
+        <meta property="og:description" content="Providing web design services in Erith, Bexley and South East London. Shopify, WordPress and Wix. Contact us for a free consultation or a quote." />
         <meta property="og:url" content="https://sybiltec.com/contact/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -135,11 +135,9 @@ permalink: /contact/
                                                 <i class="fa-solid fa-angle-down"></i>
                                             </button>
                                             <div id="myDropdown" class="dropdown-content">
-                                                <a href="https://sybiltec.com/services/">All Services</a>
                                                 <a href="https://sybiltec.com/small-business-web-design/">Web Design</a>
                                                 <a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a>
                                                 <a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a>
-                                                <a href="https://sybiltec.com/website-review/">Website Review</a>
                                                 <a href="https://sybiltec.com/training/">Workshops</a>
                                                 <a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a>
                                             </div>
@@ -206,7 +204,6 @@ permalink: /contact/
                     <div class="col-2-4">
                         <p><strong>Services</strong></p>
                         <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
                         <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/training/">Workshops</a></p>
