--- a/faqs.html
+++ b/faqs.html
@@ -52,7 +52,7 @@ permalink: /faqs/
                 "name": "What services do you offer?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text":"The services we offer include: website review, website design, website development, website maintenance, workshops and leaflet design."
+                    "text":"The services we offer include: website design, website development, website maintenance, workshops and leaflet design."
                 }
             }, {
                 "@type": "Question",
@@ -272,11 +272,9 @@ permalink: /faqs/
                                                 <i class="fa-solid fa-angle-down"></i>
                                             </button>
                                             <div id="myDropdown" class="dropdown-content">
-                                                <a href="https://sybiltec.com/services/">All Services</a>
                                                 <a href="https://sybiltec.com/small-business-web-design/">Web Design</a>
                                                 <a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a>
                                                 <a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a>
-                                                <a href="https://sybiltec.com/website-review/">Website Review</a>
                                                 <a href="https://sybiltec.com/training/">Workshops</a>
                                                 <a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a>
                                             </div>
@@ -329,7 +327,6 @@ permalink: /faqs/
                 <p><strong>1. What services do you offer?</strong></p>
                 <p>The services we offer include:</p>
                 <ul>
-                    <li>Website review</li>
                     <li>Website design</li>
                     <li>Website development</li>
                     <li>Website maintenance</li>
@@ -423,7 +420,6 @@ permalink: /faqs/
                     <div class="col-2-4">
                         <p><strong>Services</strong></p>
                         <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
                         <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/training/">Workshops</a></p>
