--- a/404.html
+++ b/404.html
@@ -30,12 +30,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>404 Page Not Found | Sybiltec Web Design</title>       
         <meta name="Description" content="Sybil Mayard provides web development services 
-        for SMEs in Shopify, Squarespace, WordPress and Wix. Contact us for a free consultation or website review.">
+        for SMEs in Shopify, Squarespace, WordPress and Wix. Contact us for a free consultation or a quote.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="404 Page Not Found | Sybiltec Web Design" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
-        for SMEs in Shopify, Squarespace, WordPress and Wix. Contact us for a free consultation or website review." />
+        for SMEs in Shopify, Squarespace, WordPress and Wix. Contact us for a free consultation or a quote." />
         <meta property="og:url" content="https://sybiltec.com/404" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -134,11 +134,9 @@
                                                 <i class="fa-solid fa-angle-down"></i>
                                             </button>
                                             <div id="myDropdown" class="dropdown-content">
-                                                <a href="https://sybiltec.com/services/">All Services</a>
                                                 <a href="https://sybiltec.com/small-business-web-design/">Web Design</a>
                                                 <a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a>
                                                 <a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a>
-                                                <a href="https://sybiltec.com/website-review/">Website Review</a>
                                                 <a href="https://sybiltec.com/training/">Workshops</a>
                                                 <a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a>
                                             </div>
@@ -213,7 +211,6 @@
                     <div class="col-2-4">
                         <p><strong>Services</strong></p>
                         <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
                         <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/training/">Workshops</a></p>
