--- a/best-free-wordpress-plugins.html
+++ b/best-free-wordpress-plugins.html
@@ -296,8 +296,7 @@ permalink: /best-free-wordpress-plugins/
                         </p>      
                     </div>
                     <div class="col-2-4">
-                        <p><strong>Awards</strong></p>
-                        <img src="https://sybiltec.com/images/awards/best-sme-focused-web-design-agency-2024.webp" alt="SME News Best SME-Focused Web Design Agency 2024">
+                        <p><strong>Award</strong></p>
                         <img src="https://sybiltec.com/images/awards/digital-services-customer-service-excellence-award-2024.webp" alt="SME News Digital Services Customer Service Excellence Award 2024">
                     </div>
                 </div>
