--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,11 @@ permalink: /contact/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact Us For a Quote or More Information | Sybiltec Web Design</title>       
+        <title>Contact Me For a Quote or More Information | Sybiltec Web Design</title>       
         <meta name="Description" content="Providing web design services in Erith, Bexley and South East London. Shopify, WordPress and Wix. Contact us for a free consultation or a quote.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Contact Us for a Quote or More Info | Sybiltec Web Design" />
+        <meta property="og:title" content="Contact Me for a Quote or More Info | Sybiltec Web Design" />
         <meta property="og:description" content="Providing web design services in Erith, Bexley and South East London. Shopify, WordPress and Wix. Contact us for a free consultation or a quote." />
         <meta property="og:url" content="https://sybiltec.com/contact/" />
         <meta property="og:site_name" content="Sybiltec" />
@@ -145,7 +145,7 @@ permalink: /contact/
                                         <a href="https://sybiltec.com/clients/">Case Studies</a>
                                         <a href="https://sybiltec.com/blog/">Blog</a>
                                         <a href="https://sybiltec.com/faqs/">FAQs</a>
-                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
+                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Me</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -180,11 +180,11 @@ permalink: /contact/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Us?</h3>
+                        <h3>Would You Like To Start A Project With Me?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
