--- a/faqs.html
+++ b/faqs.html
@@ -282,7 +282,7 @@ permalink: /faqs/
                                         <a href="https://sybiltec.com/clients/">Case Studies</a>
                                         <a href="https://sybiltec.com/blog/">Blog</a>
                                         <a href="https://sybiltec.com/faqs/">FAQs</a>
-                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
+                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Me</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -396,11 +396,11 @@ permalink: /faqs/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <p><strong>Would You Like To Start A Project With Us?</strong></p>
+                        <p><strong>Would You Like To Start A Project With Me?</strong></p>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
