--- a/importance-of-contact-information-on-your-website.html
+++ b/importance-of-contact-information-on-your-website.html
@@ -169,7 +169,7 @@ permalink: /importance-of-contact-information-on-your-website/
                                         <a href="https://sybiltec.com/clients/">Case Studies</a>
                                         <a href="https://sybiltec.com/blog/">Blog</a>
                                         <a href="https://sybiltec.com/faqs/">FAQs</a>
-                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
+                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Me</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -224,7 +224,7 @@ permalink: /importance-of-contact-information-on-your-website/
                 <p>Today we are giving you some guidance on the best ways to make your contact information visible on your website.</p>
                  
                 <ol>
-                    <li>Think about where you are placing your contact details. We suggest in the header or footer of the website, and on a Contact Us page.</li>
+                    <li>Think about where you are placing your contact details. We suggest in the header or footer of the website, and on a Contact Me page.</li>
                     <li>If your business operates from multiple locations, you may want to include the contact information for each location on your contact page.</li>
                     <li>Give your customers a range of contact options. You may want to include email, phone number, postal address, a contact form and live chat.</li>
                     <li>Your contact form should be as simple as possible and include only the required fields, i.e. name, email, phone number and message.</li>
@@ -244,11 +244,11 @@ permalink: /importance-of-contact-information-on-your-website/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Us?</h3>
+                        <h3>Would You Like To Start A Project With Me?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
