--- a/construction-web-design.html
+++ b/construction-web-design.html
@@ -146,7 +146,7 @@ permalink: /construction-web-design/
                                         <a href="https://sybiltec.com/clients/">Case Studies</a>
                                         <a href="https://sybiltec.com/blog/">Blog</a>
                                         <a href="https://sybiltec.com/faqs/">FAQs</a>
-                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
+                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Me</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -203,7 +203,7 @@ permalink: /construction-web-design/
 
                 <div class="testimonials section grey padding-top padding-bottom center">
                     <h2>Ready to Start Now?</h2>
-                    <div class="padding-top padding-bottom"><a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us Today!</a></div>
+                    <div class="padding-top padding-bottom"><a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me Today!</a></div>
                 </div>
 
                 <div class="main section">
@@ -259,11 +259,11 @@ permalink: /construction-web-design/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Us?</h3>
+                        <h3>Would You Like To Start A Project With Me?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
