--- a/fortis-dpc.html
+++ b/fortis-dpc.html
@@ -145,7 +145,7 @@ permalink: /fortis-dpc/
                                         <a href="https://sybiltec.com/clients/">Case Studies</a>
                                         <a href="https://sybiltec.com/blog/">Blog</a>
                                         <a href="https://sybiltec.com/faqs/">FAQs</a>
-                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
+                                        <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Me</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -199,7 +199,7 @@ permalink: /fortis-dpc/
                 <p>We began with adding a bold image for the hero section to represent cyber security services. We rewrote the headline and subheadline, strategically including the relevant keywords.</p>
                 <p>The new homepage now showcases all six services offered, including Standards and AI. We moved the Services section higher up on the page for site visitors to find it with less scrolling required.</p>
                 <p>Building trust with prospective customers is of paramount importance, so we wanted to emphasise this by introducing a new "Why Trust Us?" section and adding reviews right on the homepage for maximum visibility.</p>
-                <p>Book a Consultation / Contact Us was made the main CTA (call-to-action) of the website, so to reflect this, we made the contact form stand out by placing it on a vibrant blue gradient background overlaid above a futuristic vector image.</p>
+                <p>Book a Consultation / Contact Me was made the main CTA (call-to-action) of the website, so to reflect this, we made the contact form stand out by placing it on a vibrant blue gradient background overlaid above a futuristic vector image.</p>
                 <p>Finally, the Source, Fortis DPC's blog section, was given a little improvement by reducing the amount of blur of the drop shadows, for a more subtle effect.</p>
                 <div class="row">
                     <div class="col-6">
@@ -234,11 +234,11 @@ permalink: /fortis-dpc/
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h3>Would You Like To Start A Project With Us?</h3>
+                        <h3>Would You Like To Start A Project With Me?</h3>
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
