--- a/clients.html
+++ b/clients.html
@@ -25,19 +25,19 @@ permalink: /clients/
               },{
                 "@type": "ListItem",
                 "position": 2,
-                "name": "Case Studies"
+                "name": "Cliente & Case Studies"
               }]
             }
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Clients & Case Studies | Sybiltec Web Design</title>       
-        <meta name="Description" content="Sybiltec has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of case Studies here.">
+        <title>Clients & Case Studies | Small Business Success | Sybiltec</title>       
+        <meta name="Description" content="I have worked with clients from a range of industry sectors, providing the digital services they need to achieve their business goals. Read my case studies here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Clients & Case Studies | Sybiltec Web Design" />
-        <meta property="og:description" content="Sybiltec has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of case studies here." />
+        <meta property="og:title" content="Clients & Case Studies | Small Business Success | Sybiltec" />
+        <meta property="og:description" content="I have worked with clients from a range of industry sectors, providing the digital services they need to achieve their business goals. Read my case studies here." />
         <meta property="og:url" content="https://sybiltec.com/clients/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -47,7 +47,7 @@ permalink: /clients/
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
-        <meta name="twitter:data2" content="10 minutes">
+        <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <meta name="geo.region" content="GB" />
         <meta name="geo.placename" content="London" />
@@ -158,7 +158,7 @@ permalink: /clients/
         </div>
         <div class="hero">
             <div class="container-1140">
-                <h1>Case Studies</h1>        
+                <h1>Clients & Case Studies</h1>        
             </div>
         </div>
         <div class="main section">
@@ -169,12 +169,12 @@ permalink: /clients/
                     </li>
                     >
                     <li>
-                        Clients
+                        Clients & Case Studies
                     </li>
                 </ol>
 
-                <h2 class="padding-top">Clients We've Supported</h2>
-                <p>Since Sybiltec Web Design's inception in 2020, we've helped businesses from a wide range of industries achieve their goal of improving their online presence. Here is a selection of clients whom we've worked with recently.</p>
+                <h2 class="padding-top">Clients I've Supported</h2>
+                <p>Since founding Sybiltec in 2020, I've helped small businesses from a wide range of industries achieve their goal of improving their online presence. Here is a selection of past clients whom I've worked with.</p>
 
                 <div class="logos">
                     <div class="logos-slide">
@@ -217,29 +217,29 @@ permalink: /clients/
                     </div>
                 </div>
 
-                <h2>Our Work</h2>
-                <p>We have published several case studies where you can read about the projects we have completed in more detail. To view a case study, click the link below each screenshot.</p>
+                <h2>My Work</h2>
+                <p>Here are several case studies for you to read about the projects I have completed in more detail. To view a case study, click the button below each image.</p>
 
                 <div class="row center">
                     <div class="col-4">
                         <h3>Bexley Linkup</h3>
                         <img src="https://sybiltec.com/images/clients/bexley-linkup.jpg" alt="Bexley Linkup">
                         <div class="padding-btn">
-                            <a class="btn-secondary" href="https://sybiltec.com/bexley-linkup/">View Bexley Linkup &gt;&gt;</a>
+                            <a class="btn-secondary" href="https://sybiltec.com/bexley-linkup/">View Bexley Linkup</a>
                         </div>
                     </div>
                     <div class="col-4">
                         <h3>CNT Associates</h3>
                         <img src="https://sybiltec.com/images/clients/CNT-Associates-2.jpg" alt="CNT Associates">
                         <div class="padding-btn">
-                            <a class="btn-secondary" href="https://sybiltec.com/cnt-associates/">View CNT Associates &gt;&gt;</a>
+                            <a class="btn-secondary" href="https://sybiltec.com/cnt-associates/">View CNT Associates</a>
                         </div>
                     </div>
                     <div class="col-4">
                         <h3>Crazy Thumbs</h3>
                         <img src="https://sybiltec.com/images/clients/Crazy-Thumbs-2.jpg" alt="Crazy Thumbs">
                         <div class="padding-btn">
-                            <a class="btn-secondary" href="https://sybiltec.com/crazy-thumbs/">View Crazy Thumbs &gt;&gt;</a>
+                            <a class="btn-secondary" href="https://sybiltec.com/crazy-thumbs/">View Crazy Thumbs</a>
                         </div>
                     </div>
                 </div>
@@ -249,21 +249,21 @@ permalink: /clients/
                         <h3>Fortis DPC</h3>
                         <img src="https://sybiltec.com/images/clients/fortis-dpc.jpg" alt="Fortis DPC">
                         <div class="padding-btn">
-                            <a class="btn-secondary" href="https://sybiltec.com/fortis-dpc/">View Fortis DPC &gt;&gt;</a>
+                            <a class="btn-secondary" href="https://sybiltec.com/fortis-dpc/">View Fortis DPC</a>
                         </div>
                     </div>
                     <div class="col-4">
                         <h3>Happily Clappily Ever Laughter</h3>
                         <img src="https://sybiltec.com/images/clients/Happily-Clappily-Ever-Laughter-2.jpg" alt="Happily Clappily Ever Laughter">
                         <div class="padding-btn">
-                            <a class="btn-secondary" href="https://sybiltec.com/happily-clappily-ever-laughter/">View Happily Clappily Ever Laughter &gt;&gt;</a>
+                            <a class="btn-secondary" href="https://sybiltec.com/happily-clappily-ever-laughter/">View Happily Clappily Ever Laughter</a>
                         </div>
                     </div>
                     <div class="col-4">
-                        <h3>JenUp</h3>
+                        <h3>JenUp (Courses)</h3>
                         <img src="https://sybiltec.com/images/clients/jenup-courses.jpg" alt="JenUp Courses">
                         <div class="padding-btn">
-                            <a class="btn-secondary" href="https://sybiltec.com/jenup/">View JenUp &gt;&gt;</a>
+                            <a class="btn-secondary" href="https://sybiltec.com/jenup/">View JenUp (Courses)</a>
                         </div>
                     </div>
                 </div>
@@ -273,21 +273,21 @@ permalink: /clients/
                         <h3>LCG Lift Consultancy</h3>
                         <img src="https://sybiltec.com/images/clients/lcg-lift-consultancy.jpg" alt="LCG Lift Consultancy">
                         <div class="padding-btn">
-                            <a class="btn-secondary" href="https://sybiltec.com/lcg-lift-consultancy/">View LCG Lift Consultancy &gt;&gt;</a>
+                            <a class="btn-secondary" href="https://sybiltec.com/lcg-lift-consultancy/">View LCG Lift Consultancy</a>
                         </div>
                     </div>
                     <div class="col-4">
                         <h3>NeroWireArt</h3>
                         <img src="https://sybiltec.com/images/clients/nerowireart.jpg" alt="NeroWireArt">
                         <div class="padding-btn">
-                            <a class="btn-secondary" href="https://sybiltec.com/nerowireart/">View NeroWireArt &gt;&gt;</a>
+                            <a class="btn-secondary" href="https://sybiltec.com/nerowireart/">View NeroWireArt</a>
                         </div>
                     </div>
                     <div class="col-4">
                         <h3>New Haw Community Centre</h3>
                         <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">
                         <div class="padding-btn">
-                            <a class="btn-secondary" href="https://sybiltec.com/new-haw-community-centre/">View New Haw Community Centre &gt;&gt;</a>
+                            <a class="btn-secondary" href="https://sybiltec.com/new-haw-community-centre/">View New Haw Community Centre</a>
                         </div>
                     </div>
                 </div>
